[package]
name = "toonify-cli"
version = "1.0.0"
description = "Photo of any face into a cartoon CLI app"
authors = ["XXIV"]
homepage = "https://github.com/thechampagne/toonify-cli"
repository = "https://github.com/thechampagne/toonify-cli"
keywords = ["pictures", "media", "entertainment", "photos", "cli"]
categories = ["command-line-utilities", "command-line-interface"]
readme = "README.md"
license = "Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toonify = "1.0.0"
reqwest = { version = "0.11", features = ["blocking"] }

[[bin]]
bench = false
path = "src/main.rs"
name = "toonify"